test: Add test case for invalid year