@@ -72,13 +72,10 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.time.LocalDate;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @WireMockTest(httpsEnabled = true)
 class SearchPublisherByQueryHandlerTest {
@@ -310,7 +307,7 @@ class SearchPublisherByQueryHandlerTest {
     }
 
     @ParameterizedTest(name = "year {0} is invalid")
-    @MethodSource("invalidYearsProvider")
+    @MethodSource("no.sikt.nva.pubchannels.handler.TestUtils#invalidYearsProvider")
     void shouldReturnBadRequestWhenYearIsInvalid(String year) throws IOException {
         var queryParameters = Map.of("year", year, "query", "asd");
         var input = constructRequest(queryParameters, MediaType.ANY_TYPE);
@@ -421,11 +418,6 @@ class SearchPublisherByQueryHandlerTest {
                    is(equalTo("Unexpected response from upstream!")));
     }
 
-    private static Stream<String> invalidYearsProvider() {
-        String yearAfterNextYear = Integer.toString(LocalDate.now().getYear() + 2);
-        return Stream.of(" ", "abcd", yearAfterNextYear, "21000");
-    }
-
     private static PaginatedSearchResult<PublisherDto> getExpectedPaginatedSearchPublisherResultNameSearch(
         List<String> results,
         String year,
@@ -440,24 +432,27 @@ class SearchPublisherByQueryHandlerTest {
             expectedParams.put("year", year);
         }
 
-        return PaginatedSearchResult.create(constructPublicationChannelUri(PUBLISHER_PATH, null),
-                                            queryOffset,
-                                            querySize,
-                                            expectedHits.size(),
-                                            expectedHits.stream()
-                                                .skip(queryOffset)
-                                                .limit(querySize)
-                                                .collect(Collectors.toList()),
-                                            expectedParams);
+        return PaginatedSearchResult.create(
+                constructPublicationChannelUri(PUBLISHER_PATH, null),
+                queryOffset,
+                querySize,
+                expectedHits.size(),
+                expectedHits.stream().skip(queryOffset).limit(querySize).toList(),
+                expectedParams);
     }
 
     private static List<PublisherDto> mapToPublisherResults(List<String> results, String requestedYear) {
-        return results
-                   .stream()
-                   .map(result -> attempt(
-                       () -> objectMapper.readValue(result, ChannelRegistryPublisher.class)).orElseThrow())
-                   .map(publisher -> toPublisherResult(publisher, requestedYear))
-                   .collect(Collectors.toList());
+        return results.stream()
+                .map(
+                        result ->
+                                attempt(
+                                                () ->
+                                                        objectMapper.readValue(
+                                                                result,
+                                                                ChannelRegistryPublisher.class))
+                                        .orElseThrow())
+                .map(publisher -> toPublisherResult(publisher, requestedYear))
+                .toList();
     }
 
     private static PublisherDto toPublisherResult(ThirdPartyPublisher publisher, String requestedYear) {
